--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,6 +6,8 @@
         <title>{{ page.title }}</title>
         <meta name="viewport" content="width=device-width">
 
+        <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,100italic,300italic,400italic,700italic,900italic' rel='stylesheet' type='text/css'>
+
         <!-- syntax highlighting CSS -->
         <link rel="stylesheet" href="/css/syntax.css">
 
@@ -19,23 +21,24 @@
           <div class="site">
             <div class="header">
               <h1 class="title"><a href="/">{{ site.name }}</a></h1>
-              <a class="extra" href="/">home</a>
+              <ul class="menu">
+                <li><a href="/">Home</a></li>
+                <li><a href="/">About</a></li>
+              </ul>
+              <ul class="socialnetworks menu" style="float:right">
+                <li><a href="/">Twitter</a></li>
+                <li><a href="/">Facebook</a></li>
+                <li><a href="/">Github</a></li>
+                <li><a href="/">Linkedin</a></li>
+              </ul>
             </div>
-
+            <div class="main" style="clear:both;">
                 {{ content }}
-
+            </div>
             <div class="footer">
               <div class="contact">
-                <p>
-                  Your Name<br />
-                  What You Are<br />
-                  your@email.com
-                </p>
-              </div>
-              <div class="contact">
-                <p>
-                  <a href="http://github.com/yourusername/">github.com/yourusername</a><br />
-                  <a href="http://twitter.com/yourusername/">twitter.com/yourusername</a><br />
+                <p style="margin:0">
+                  Copyright © 2013 - Jai Keerthi - Powerd by <a href="#">Jekyll</a>
                 </p>
               </div>
             </div>
