--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,9 +36,14 @@
                 {{ content }}
             </div>
             <div class="footer">
-              <div class="contact">
-                <p style="margin:0">
-                  Copyright © 2013 - Jai Keerthi - Powerd by <a href="#">Jekyll</a>
+              <div class="contact" style="width:100%">
+                <p style="margin:0;float:left;width:100%">
+                  <span style="float: left" >
+                    Copyright © 2012 - 2013, Jai Keerthi
+                  </span>
+                  <span style="float: right;">
+                    Powerd by <a href="#">Jekyll</a> - <a href="http://www.github.com">Github</a>
+                  </span>
                 </p>
               </div>
             </div>
