--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,12 +25,19 @@
                 <li><a href="/">Home</a></li>
                 <li><a href="/">About</a></li>
               </ul>
-              <ul class="socialnetworks menu" style="float:right">
-                <li><a href="/">Twitter</a></li>
-                <li><a href="/">Facebook</a></li>
-                <li><a href="/">Github</a></li>
-                <li><a href="/">Linkedin</a></li>
-              </ul>
+              <!-- <ul class="social_pages" style="float:right"> -->
+              <!--   <li> -->
+              <!--     <a href="http://www.github.com/kjaikeerthi"><img src="images/octocat.png"></a> -->
+              <!--   </li> -->
+              <!--   <li> -->
+              <!--     <a href="http://www.github.com/kjaikeerthi"><img src="images/facebook.png"></a> -->
+              <!--   </li> -->
+              <!--   <li> -->
+              <!--     <a href="http://www.twitter.com/kjaikeerthi"><img src="https://abs.twimg.com/a/1377795275/images/resources/twitter-bird-light-bgs.png"></a> -->
+              <!--   </li> -->
+              <!--   <li><a href="/">Github</a></li> -->
+              <!--   <li><a href="/">Linkedin</a></li> -->
+              <!-- </ul> -->
             </div>
             <div class="main" style="clear:both;">
                 {{ content }}
