--- a/css/main.css
+++ b/css/main.css
@@ -106,6 +106,17 @@ ul.posts span {
   border: 1px solid #dcdbdb;
   border-radius: 0;
 }
+
+.site ul.social_pages li{
+  display: inline-block;
+  list-style: none;
+  border-radius: 0;
+}
+.site ul.social_pages li img{
+  width: 32px;
+  height: 32px;
+}
+
 .site ul.menu li a{
   color: black;
   text-decoration: none;
