--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,7 @@
         <div class="container">
           <div class="site">
             <div class="header">
-              <h1 class="title"><a href="/">{{ site.name }}</a></h1>
+              <h1 class="title" style="padding-left: 5px;"><a href="/">{{ site.name }}</a></h1>
               <ul class="menu">
                 <li><a href="/">Home</a></li>
                 <li><a href="/">About</a></li>
@@ -39,16 +39,16 @@
               <!--   <li><a href="/">Linkedin</a></li> -->
               <!-- </ul> -->
             </div>
-            <div class="main" style="clear:both;">
-                {{ content }}
-            </div>
+
+            {{ content }}
+
             <div class="footer">
               <div class="contact" style="width:100%">
-                <p style="margin:0;float:left;width:100%">
-                  <span style="float: left" >
+                <p style="margin:0;float:left;width:100%;">
+                  <span style="float: left;padding-left:5px;" >
                     Copyright © 2012 - 2013, Jai Keerthi
                   </span>
-                  <span style="float: right;">
+                  <span style="float: right;padding-right:5px;">
                     Powerd by <a href="#">Jekyll</a> - <a href="http://www.github.com">Github</a>
                   </span>
                 </p>
