--- a/css/main.css
+++ b/css/main.css
@@ -172,6 +172,7 @@ ul.posts span {
   background: white;
   border: 1px solid #dcdbdb;
   padding: 20px;
+  margin-bottom: 10px;
 }
 
 .main h2{
@@ -201,6 +202,7 @@ ul.posts span {
   border: 1px solid #ddd;
   background-color: #F5F5F5;
   padding: 5px;
+  overflow: hidden;
 }
 
 .post ul, .post ol {
