--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,7 @@
               <h1 class="title" style="padding-left: 5px;"><a href="/">{{ site.name }}</a></h1>
               <ul class="menu">
                 <li><a href="/">Home</a></li>
-                <li><a href="/">About</a></li>
+                <li><a href="/about.html">About</a></li>
               </ul>
               <!-- <ul class="social_pages" style="float:right"> -->
               <!--   <li> -->
