added google analytics support

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,7 +41,6 @@
             </div>
 
             {{ content }}
-
             <div class="footer">
               <div class="contact" style="width:100%">
                 <p style="margin:0;float:left;width:100%;">
@@ -56,6 +55,6 @@
             </div>
           </div>
         </div> <!-- /container -->
-
+        {% include analytics.html %}
     </body>
 </html>
