--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,3 +9,15 @@ layout: default
     {{ content }}
   </div>
 </div>
+
+<div class="comments" style="clear:both">
+  <div id="disqus_thread"></div>
+  <script type="text/javascript" src="http://disqus.com/forums/kjaikeerthi/embed.js">
+  </script>
+  <noscript>
+    <a href="http://kjaikeerthi.disqus.com/?url=ref">View the discussion thread.</a>
+  </noscript>
+  <a href="http://disqus.com" class="dsq-brlink">
+    blog comments powered by <span class="logo-disqus">Disqus</span>
+  </a>
+</div>
