updated configs / content

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -45,7 +45,7 @@
               <div class="contact" style="width:100%">
                 <p style="margin:0;float:left;width:100%;">
                   <span style="float: left;padding-left:5px;" >
-                    Copyright © 2012 - 2013, Jai Keerthi
+                    Copyright © 2012 - 2013, Jaikeerthi
                   </span>
                   <span style="float: right;padding-right:5px;">
                     Powerd by <a href="#">Jekyll</a> - <a href="http://www.github.com">Github</a>
