--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,60 +1,62 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>{{ page.title }}</title>
-        <meta name="viewport" content="width=device-width">
 
-        <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,100italic,300italic,400italic,700italic,900italic' rel='stylesheet' type='text/css'>
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <title>{{ page.title }}</title>
+    <meta name="viewport" content="width=device-width">
 
-        <!-- syntax highlighting CSS -->
-        <link rel="stylesheet" href="/css/syntax.css">
+    <link
+        href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,100italic,300italic,400italic,700italic,900italic'
+        rel='stylesheet' type='text/css'>
 
-        <!-- Custom CSS -->
-        <link rel="stylesheet" href="/css/main.css">
+    <!-- syntax highlighting CSS -->
+    <link rel="stylesheet" href="/css/syntax.css">
 
-    </head>
-    <body>
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="/css/main.css">
 
-        <div class="container">
-          <div class="site">
+</head>
+
+<body>
+
+    <div class="container">
+        <div class="site">
             <div class="header">
-              <h1 class="title" style="padding-left: 5px;"><a href="/">{{ site.name }}</a></h1>
-              <ul class="menu">
-                <li><a href="/">Home</a></li>
-                <li><a href="/about.html">About</a></li>
-              </ul>
-              <!-- <ul class="social_pages" style="float:right"> -->
-              <!--   <li> -->
-              <!--     <a href="http://www.github.com/kjaikeerthi"><img src="images/octocat.png"></a> -->
-              <!--   </li> -->
-              <!--   <li> -->
-              <!--     <a href="http://www.github.com/kjaikeerthi"><img src="images/facebook.png"></a> -->
-              <!--   </li> -->
-              <!--   <li> -->
-              <!--     <a href="http://www.twitter.com/kjaikeerthi"><img src="https://abs.twimg.com/a/1377795275/images/resources/twitter-bird-light-bgs.png"></a> -->
-              <!--   </li> -->
-              <!--   <li><a href="/">Github</a></li> -->
-              <!--   <li><a href="/">Linkedin</a></li> -->
-              <!-- </ul> -->
+                <h1 class="title" style="padding-left: 5px;"><a href="/">{{ site.name }}</a></h1>
+                <ul class="menu">
+                    <li><a href="/">Home</a></li>
+                    <li><a href="/about.html">About</a></li>
+                </ul>
+                <div class="social_pages" style="float:right;display:flex;">
+                    <a target="_blank" href="http://www.github.com/kjaikeerthi"><img src="images/github.png" width="32px"
+                            height="32px"></a>
+                    <a target="_blank" href="https://www.linkedin.com/in/kjaikeerthi/"><img src="images/linkedin.png" width="32px"
+                            height="32px"></a>
+                    <a target="_blank" href="http://www.twitter.com/kjaikeerthi">
+                        <img src="images/twitter-x.png"
+                            width="32px" height="32px">
+                    </a>
+                </div>
             </div>
 
             {{ content }}
             <div class="footer">
-              <div class="contact" style="width:100%">
-                <p style="margin:0;float:left;width:100%;">
-                  <span style="float: left;padding-left:5px;" >
-                    Copyright © 2012 - 2013, Jaikeerthi
-                  </span>
-                  <span style="float: right;padding-right:5px;">
-                    Powerd by <a href="#">Jekyll</a> - <a href="http://www.github.com">Github</a>
-                  </span>
-                </p>
-              </div>
+                <div class="contact" style="width:100%">
+                    <p style="margin:0;float:left;width:100%;">
+                        <span style="float: left;padding-left:5px;">
+                            Copyright © 2012 - 2013, Jaikeerthi
+                        </span>
+                        <span style="float: right;padding-right:5px;">
+                            Powerd by <a href="#">Jekyll</a> - <a href="http://www.github.com">Github</a>
+                        </span>
+                    </p>
+                </div>
             </div>
-          </div>
-        </div> <!-- /container -->
-        {% include analytics.html %}
-    </body>
+        </div>
+    </div> <!-- /container -->
+    {% include analytics.html %}
+</body>
+
 </html>
