--- a/css/main.css
+++ b/css/main.css
@@ -10,7 +10,10 @@
   padding: 0;
 }
 
-html, body { height: 100%; }
+html,
+body {
+  height: 100%;
+}
 
 body {
   background-color: #EEEEEE;
@@ -19,13 +22,26 @@ body {
   text-align: center;
 }
 
-h1, h2, h3, h4, h5, h6 {
-  font-size: 100%; }
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-size: 100%;
+}
 
-h1 { margin-bottom: 1em; }
-p { margin: 1em 0; }
+h1 {
+  margin-bottom: 1em;
+}
 
-a, a:hover, a:visited {
+p {
+  margin: 1em 0;
+}
+
+a,
+a:hover,
+a:visited {
   color: black;
 }
 
@@ -68,7 +84,8 @@ ul.posts span {
   line-height: 1.5em;
 }
 
-.site .header h1.title, .site .header ul.menu{
+.site .header h1.title,
+.site .header ul.menu {
   float: left;
 }
 
@@ -94,11 +111,11 @@ ul.posts span {
   color: #000;
 }
 
-.site ul.menu{
+.site ul.menu {
   margin-left: 20px;
 }
 
-.site ul.menu li{
+.site ul.menu li {
   padding: 7px;
   display: inline-block;
   background: #d7d7d7;
@@ -107,19 +124,17 @@ ul.posts span {
   border-radius: 0;
 }
 
-.site ul.social_pages li{
-  display: inline-block;
-  list-style: none;
-  border-radius: 0;
-}
-.site ul.social_pages li img{
+.site .social_pages img {
   width: 32px;
   height: 32px;
 }
 
-.site ul.menu li a{
-  color: black;
-  text-decoration: none;
+.site .social_pages a {
+  margin-right: 15px;
+}
+
+.site .social_pages a:last-child {
+  margin-right: 0;
 }
 
 .site .header a.extra {
@@ -168,26 +183,26 @@ ul.posts span {
 /*
 /*****************************************************************************/
 
-.main{
+.main {
   background: white;
   border: 1px solid #dcdbdb;
   padding: 20px;
   margin-bottom: 10px;
 }
 
-.main h2{
+.main h2 {
   color: black;
   font-size: 20px;
 }
 
-.main p.meta{
+.main p.meta {
   font-size: 13px;
   color: #717171;
   line-height: 15px;
   margin-top: 5px;
 }
 
-.main .post{
+.main .post {
   color: #333333;
 }
 
@@ -205,7 +220,8 @@ ul.posts span {
   overflow: hidden;
 }
 
-.post ul, .post ol {
+.post ul,
+.post ol {
   margin-left: 1.35em;
 }
 
